overlapping text bug fix

--- a/pokematic-frontend/src/pages/board-components/Modals/TaskModalContent.css
+++ b/pokematic-frontend/src/pages/board-components/Modals/TaskModalContent.css
@@ -136,7 +136,7 @@
 
     .task-title{
         font-size: 30px;
-        line-height: 25px;
+        line-height: 35px;
     }
 
     .story-points-label{
